test1 passwordbox 작업 전단계로 돌려놓기

--- a/WPF_Login/WPF_Login/View/Main.xaml
+++ b/WPF_Login/WPF_Login/View/Main.xaml
@@ -7,9 +7,26 @@
         mc:Ignorable="d"
         Title="Main" Height="300" Width="300">
     <Grid>
-        <TextBox x:Name="Id"></TextBox>
-        <PasswordBox x:Name="psWord" Width="200" Height="20" Margin="49,23,43,226"></PasswordBox>
-        <Button Command="{Binding pswCmd}" CommandParameter="{Binding ElementName=psWord}" Height="50" Width="50">ok</Button>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="10*"/>
+                <RowDefinition Height="15*"/>
+                <RowDefinition Height="15*"/>
+                <RowDefinition Height="15*"/>
+                <RowDefinition Height="30*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="18*"/>
+                <ColumnDefinition Width="25*"/>
+                <ColumnDefinition Width="40*"/>
+                <ColumnDefinition Width="18*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Margin="12" Grid.Row="1" Grid.Column="1" Text="아이디" FontSize="13" HorizontalAlignment="Center"/>
+            <TextBlock Margin="12" Grid.Row="2" Grid.Column="1" Text="비밀번호" FontSize="13" HorizontalAlignment="Center"/>
+            <TextBox Text="{Binding LoginID}" x:Name="LoginID" Grid.Row="1" Grid.Column="2" Margin="8" Width="100" HorizontalAlignment="Left"/>
+            <TextBox Text="{Binding LoginPWD}" x:Name="LoginPWD" Grid.Row="2" Grid.Column="2" Margin="8" Width="100" HorizontalAlignment="Left"/>
+            <Button Command="{Binding LoginCommand}" x:Name="btnLogin" Grid.Row="3" Grid.Column="2" Content="로그인" Margin="8" Width="80" HorizontalAlignment="Right"/>
+        </Grid>
 
     </Grid>
 </Window>
