--- a/WPF_Login/WPF_Login/View/Main.xaml
+++ b/WPF_Login/WPF_Login/View/Main.xaml
@@ -7,7 +7,6 @@
         mc:Ignorable="d"
         Title="Main" Height="300" Width="300">
     <Grid>
-<<<<<<< HEAD
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="10*"/>
@@ -28,11 +27,9 @@
             <TextBox Text="{Binding LoginPWD}" x:Name="LoginPWD" Grid.Row="2" Grid.Column="2" Margin="8" Width="100" HorizontalAlignment="Left"/>
             <Button Command="{Binding LoginCommand}" x:Name="btnLogin" Grid.Row="3" Grid.Column="2" Content="로그인" Margin="8" Width="80" HorizontalAlignment="Right"/>
         </Grid>
-=======
-        <PasswordBox x:Name="psWord" Width="200" Height="20" Margin="49,68,43,181"></PasswordBox>
-        <Button Command="{Binding pswCmd}" CommandParameter="{Binding ElementName=psWord}" Height="50" Width="50">ok</Button>
-        <TextBox x:Name="Id" HorizontalAlignment="Left" Height="40" Margin="49,10,0,0" TextWrapping="Wrap" Text="{Binding Id}" VerticalAlignment="Top" Width="200"/>
->>>>>>> master
+        <PasswordBox x:Name="Pwd" Width="200" Height="20" Margin="49,97,43,152"></PasswordBox>
+        <Button Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=Pwd}" Height="50" Width="50" Margin="64,162,178,57">ok</Button>
+        <TextBox x:Name="Id" HorizontalAlignment="Left" Height="40" Margin="49,37,0,0" TextWrapping="Wrap" Text="{Binding Id}" VerticalAlignment="Top" Width="200"/>
 
     </Grid>
 </Window>
