--- a/WPF_Login/WPF_Login/View/Main.xaml
+++ b/WPF_Login/WPF_Login/View/Main.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Login.View"
+        xmlns:ff="clr-namespace:WPF_Login.BL"
         mc:Ignorable="d"
         Title="Main" Height="300" Width="300">
     <Grid>
@@ -27,9 +28,8 @@
             <TextBox Text="{Binding LoginPWD}" x:Name="LoginPWD" Grid.Row="2" Grid.Column="2" Margin="8" Width="100" HorizontalAlignment="Left"/>
             <Button Command="{Binding LoginCommand}" x:Name="btnLogin" Grid.Row="3" Grid.Column="2" Content="로그인" Margin="8" Width="80" HorizontalAlignment="Right"/>
         </Grid>
-        <PasswordBox x:Name="Pwd" Width="200" Height="20" Margin="49,97,43,152"></PasswordBox>
+        <PasswordBox ff:PasswordBoxAssistant.BindPassword="true" ff:PasswordBoxAssistant.BoundPassword="{Binding Path=Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="Pwd" Width="200" Height="20" Margin="49,97,43,152"></PasswordBox>
         <Button Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=Pwd}" Height="50" Width="50" Margin="64,162,178,57">ok</Button>
         <TextBox x:Name="Id" HorizontalAlignment="Left" Height="40" Margin="49,37,0,0" TextWrapping="Wrap" Text="{Binding Id}" VerticalAlignment="Top" Width="200"/>
-
     </Grid>
 </Window>
